--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,8 @@ dependencies {
     // spring-boot-starter-validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    // mysql-connector 추가
-    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
+    // postgre-sql 추가
+    implementation 'org.postgresql:postgresql:42.7.3'
 
     // commons-io
     implementation 'commons-io:commons-io:2.14.0'
