--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   app:
-    image: ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:latest # 사용할 이미지 이름
+    image: ${DOCKER_USERNAME}/play-hive-chat:latest # 사용할 이미지 이름
     build:
       context: . # Dockerfile이 위치한 디렉토리
       dockerfile: Dockerfile # 빌드에 사용할 Dockerfile
@@ -18,7 +18,8 @@ services:
       AWS_BUCKET: ${AWS_BUCKET}
       AWS_URL: ${AWS_URL}
       TZ: ${TZ}
-      DOCKER_IMAGE_NAME: ${DOCKER_IMAGE_NAME}
+      JWT_ISSUER: ${JWT_ISSUER}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
     networks:
       - playhive-net
     restart: always
