--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ dependencies {
 
     // postgre-sql 추가
     implementation 'org.postgresql:postgresql:42.7.3'
+    // mysql-connector 추가
+    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
 
     // commons-io
     implementation 'commons-io:commons-io:2.14.0'
@@ -69,11 +71,6 @@ dependencies {
 
     //openfeign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
-
-    // Redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    // Redisson
-    implementation 'org.redisson:redisson-spring-boot-starter:3.23.4'
     // Jwt
     implementation 'io.jsonwebtoken:jjwt:0.12.6'
 }
