--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -38,7 +38,7 @@ jobs:
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.AWS_CHAT_SERVER_IP }}
-          username: ${{ secrets.AWS_USERNAME }}
+          username: ${{ secrets.AWS_USERNAME_CHAT }}
           key: ${{ secrets.SSH_PRIVATE_KEY_CHAT }}
           source: ./docker-compose.yml
           target: ~/play-hive/
@@ -69,7 +69,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.AWS_CHAT_SERVER_IP }}
-          username: ${{ secrets.AWS_USERNAME }}
+          username: ${{ secrets.AWS_USERNAME_CHAT }}
           key: ${{ secrets.SSH_PRIVATE_KEY_CHAT }}
           script: |
             echo "Checking if Java is installed..."
@@ -85,7 +85,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.AWS_CHAT_SERVER_IP }}
-          username: ${{ secrets.AWS_USERNAME }}
+          username: ${{ secrets.AWS_USERNAME_CHAT }}
           key: ${{ secrets.SSH_PRIVATE_KEY_CHAT }}
           script: |
             # 이동할 디렉토리 설정
